Removed bug that cut off portions of the main card.

--- a/src/CSS Components/PrimaryContent.css
+++ b/src/CSS Components/PrimaryContent.css
@@ -229,7 +229,6 @@ section {
   justify-content: center;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 }
 .main-content {
   display: flex;
@@ -372,6 +371,6 @@ section {
 @media only screen and (max-width: 322px) and (max-height: 570px) {
   .main-card-dark,
   .main-card {
-    height: 100vh;
+    overflow: hidden;
   }
 }
